--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -1,5 +1,7 @@
 {
     "siteTitle": "ExamGenerator",
+    "success": "Registrierung erfolgreich",
+    "toLoginPage": "Zum Login",
     "signIn": "Login",
     "signOut": "Logout",
     "english": "Englisch",
@@ -9,9 +11,18 @@
     "confirmPassword": "Passwort bestätigen",
     "needAnAccount": "Benutzerkonto benötigt?",
     "register": "Registrieren",
+    "invalidEntry": "Eingabe nicht valide",
+    "noServerResponse": "Server antwortet nicht",
+    "usernameTaken": "Nutzername vergeben",
+    "registrationFailed": "Registrierung fehlgeschlagen",
+    "missingUsernameOrPassword": "Nutzername oder Passwort fehlt",
+    "loginFailed": "Login fehlgeschlagen",
+    "errNewExam": "Klausur erstellen Fehlgeschlagen. Nicht genügend Aufgaben für gewähltes Thema gefunden.",
     "home": "Home",
     "welcome": "Willkommen beim Exam Generator",
     "homeText": "Dies ist ein Tool zur automatischen Generierung von Klausuren.",
+    "imprint": "Impressum und Datenschutz",
+    "imprintText": "Hier kommt das Impressum hin",
     "allCourses": "Alle Kurse",
     "editCourse": "Kurs Bearbeiten",
     "newCourse": "Neuer Kurs",
@@ -29,6 +40,25 @@
     "newExam": "Neue Klausur",
     "showExam": "Klausur Anzeigen",
     "allUsers": "Alle Benutzer",
+    "taskTitlePlaceholder": "Titel der Aufgabe",
+    "taskDescriptionPlaceholder": "Beschreibung der Aufgabe",
+    "taskDurationPlaceholder": "Dauer in Minuten",
+    "taskPointsPlaceholder": "Maximale Punktzahl der Aufgabe",
+    "taskDifficultyPlaceholder": "In Zahlen 1-5",
+    "taskQuestionPlaceholder": "Fragestellung der Aufgabe",
+    "taskAnswerPlaceholder": "Antworttext",
+    "examTitlePlaceholder": "Titel/Name der Klausur",
+    "examImportantNotesPlaceholder": "Wichtige Anmerkungen zur Klausur",
+    "examSubjectAreaNamePlaceholder": "Name/Überschrift des Themenbereichs",
+    "examSubjectAreaDurationPlaceholder": "Dauer in Minuten",
+    "examSelectTopicPlaceholder": "Bitte Kursthema auswählen",
+    "selectCoursePlaceholder": "Bitte Kurs auswählen",
+    "selectTopicPlaceholder": "Bitte Kursthema auswählen",
+    "selectTasktypePlaceholder": "Bitte Aufgabentyp auswählen",
+    "courseTitlePlaceholder": "Name des Kurses",
+    "courseDescriptionPlaceholder": "Kursbeschreibung",
+    "topicTitlePlaceholder": "Titel des Themas",
+    "topicDescriptionPlaceholder": "Themenbeschreibung",
     "tasks": "Aufgaben",
     "exams": "Klausuren",
     "courses": "Kurse",
@@ -43,6 +73,7 @@
     "inMinutes": "in Minuten",
     "examInfo": "Allgemeine Informationen",
     "notes": "Wichtige Anmerkungen",
+    "block": "Themenbereich",
     "blockName": "Name Themebereich",
     "blockDuration": "Dauer Themenbereich",
     "addBlock": "Themenbereich hinzufügen",
@@ -94,5 +125,12 @@
     "resourceNotFound": "Die gewünschte Ressource wurde nicht gefunden",
     "errorUsernameInput": "4 bis 24 Zeichen. Muss mit einem Buchstaben beginnen. Buchstaben, Zahlen und Sonderzeichen erlaubt.",
     "errorPasswordInput": "8 bis 24 Zeichen. Muss Groß- und Kleinbuchstaben, Zahl und Sonderzeichen enthalten. Erlaubte Sonderzeichen: !@#$%",
-    "errorConfirmPasswordInput": "Passwörter müssen übereinstimmen."
+    "errorConfirmPasswordInput": "Passwörter müssen übereinstimmen.",
+    "forbiddenError": "Nicht Autorisiert",
+    "notFoundError": "Nicht gefunden",
+    "topicUsedError": "Dieses Kursthema wird noch verwendet, bitte zuerst alle zugehörigen Aufgaben löschen",
+    "courseUsedError": "Dieser Kurs wird noch verwendet, bitte zuerst alle zugehörigen Aufgaben und Kursthemen löschen",
+    "duplicateCourseError": "Kurs bereits vorhanden",
+    "duplicateTopicError": "Thema in diesem Kurs bereits vorhanden",
+    "error": "unbekannter Fehler"
   }
