--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,7 @@
 {
   "siteTitle": "ExamGenerator",
+  "success": "Registration successful",
+  "toLoginPage": "To Loginpage",
   "signIn": "Sign In",
   "signOut": "Sign Out",
   "english": "English",
@@ -9,9 +11,18 @@
   "confirmPassword": "Confirm Password",
   "needAnAccount": "Need an Account?",
   "register": "Register",
+  "invalidEntry": "Invalid Entry",
+  "noServerResponse": "No Server Response",
+  "usernameTaken": "Username Taken",
+  "registrationFailed": "Registration Failed",
+  "missingUsernameOrPassword": "Missing Username or Password",
+  "loginFailed": "Login Failed",
+  "errNewExam": "Create new exam failed. Not enough tasks for chosen topic found.",
   "home": "Home",
   "welcome": "Welcome to the Exam Generator",
   "homeText": "This is a tool to automatically generate exams.",
+  "imprint": "Imprint and Privacy",
+  "imprintText": "Heres to put the Imprint and Privacy",
   "allCourses": "All Courses",
   "editCourse": "Edit Course",
   "newCourse": "New Course",
@@ -29,6 +40,25 @@
   "newExam": "New Exam",
   "showExam": "Show Exam",
   "allUsers": "All Users",
+  "taskTitlePlaceholder": "Title of the task",
+  "taskDescriptionPlaceholder": "Taskdescription",
+  "taskDurationPlaceholder": "Duration in Minutes",
+  "taskPointsPlaceholder": "Maximum points of the task",
+  "taskDifficultyPlaceholder": "In numbers 1-5",
+  "taskQuestionPlaceholder": "Question of the Task",
+  "taskAnswerPlaceholder": "Answertext",
+  "examTitlePlaceholder": "Titel/Name of the exam",
+  "examImportantNotesPlaceholder": "Important Notes",
+  "examSubjectAreaNamePlaceholder": "Name/Headline of the Subject Area",
+  "examSubjectAreaDurationPlaceholder": "Duration in Minutes",
+  "examSelectTopicPlaceholder": "Please select a topic",
+  "selectCoursePlaceholder": "Please select a course",
+  "selectTopicPlaceholder": "Please select a topic",
+  "selectTasktypePlaceholder": "please select a tasktype",
+  "courseTitlePlaceholder": "Name of the course",
+  "courseDescriptionPlaceholder": "Coursedescription",
+  "topicTitlePlaceholder": "Title of the topic",
+  "topicDescriptionPlaceholder": "topicdescription",
   "tasks": "Tasks",
   "exams": "Exams",
   "courses": "Courses",
@@ -41,7 +71,9 @@
   "name": "Name",
   "inNumbers": "in Numbers",
   "inMinutes": "in Minutes",
+  "examInfo": "Allgemeine Informationen",
   "notes": "Important Notes",
+  "block": "Subject Area",
   "blockName": "Subject Area Name",
   "blockDuration": "Subject Area Duration",
   "addBlock": "Add Subject Area",
@@ -82,7 +114,7 @@
   "editUser": "Edit User",
   "saveChanges": "Save Changes",
   "confirmDeleteTask": "Are you sure you want to delete the task?",
-  "confirmDeleteExam": "Are you sure you want to delete the course?",
+  "confirmDeleteExam": "Are you sure you want to delete the exam?",
   "confirmDeleteCourse": "Are you sure you want to delete the course?",
   "confirmDeleteTopic": "Are you sure you want to delete the topic?",
   "notFound": "404: Not Found",
@@ -93,5 +125,12 @@
   "resourceNotFound": "The resource you requested is not found",
   "errorUsernameInput": "4 to 24 characters. Must begin with upper case. characters, numbers and special characters allowed.",
   "errorPasswordInput": "8 to 24 characters. Must contain uppercase, lowercase, number and special character. allowed special characters are: !@#$%",
-  "errorConfirmPasswordInput": "Passwords must match."
+  "errorConfirmPasswordInput": "Passwords must match.",
+  "forbiddenError": "Not Authorized",
+  "notFoundError": "Not found",
+  "topicUsedError": "This topic is still in use, please delete all connected tasks",
+  "courseUsedError": "This course is still in use, please delete all connected topics and tasks",
+  "duplicateCourseError": "Course already exists",
+  "duplicateTopicError": "Topic in this course already exists",
+  "error": "unknown error"
 }
